Common methods were moved to parent Element1D class. Further additions to NLTruss class.

--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Elements\NLEulerBernoulli1DElement.cs" />
-    <Compile Include="NLTruss.cs" />
+    <Compile Include="Elements\NLTruss.cs" />
     <Compile Include="Solver\NLSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
