--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Elements\NLEulerBernoulli1DElement.cs" />
     <Compile Include="Elements\NLTruss.cs" />
+    <Compile Include="Elements\NLTruss2.cs" />
     <Compile Include="Solver\NLSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
