Addition of new interfaces and classes. Breaking Solver to smaller files.

--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -45,6 +45,9 @@
     <Compile Include="FEProject\IFEProject.cs" />
     <Compile Include="LinearAlgebra\Matrix.cs" />
     <Compile Include="Solver\CentralDifferencesSolver.cs" />
+    <Compile Include="Solver\DirectMethods.cs" />
+    <Compile Include="Solver\GaussElimination.cs" />
+    <Compile Include="Solver\IDirectSolver.cs" />
     <Compile Include="Solver\NLSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
