--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Solver\CentralDifferencesSolver.cs" />
     <Compile Include="Solver\Deleted\DirectMethods.cs" />
     <Compile Include="Solver\Deleted\Gauss.cs" />
+    <Compile Include="Solver\DirectMethods\CholeskyFactorization.cs" />
     <Compile Include="Solver\DirectMethods\GaussSolver.cs" />
     <Compile Include="Solver\ILinearSolution.cs" />
     <Compile Include="Solver\LinearSolution.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Elements\IElements1D.cs" />
     <Compile Include="Data\InputData.cs" />
     <Compile Include="Solver\IterativeSolver.cs" />
+    <Compile Include="Solver\StaticSolver.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
