--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Solver\DirectMethods\CholeskyFactorization.cs" />
     <Compile Include="Solver\DirectMethods\GaussSolver.cs" />
     <Compile Include="Solver\ILinearSolution.cs" />
+    <Compile Include="Solver\ISolver.cs" />
     <Compile Include="Solver\LinearSolution.cs" />
     <Compile Include="Solver\NLSolver.cs" />
     <Compile Include="Program.cs" />
