--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -49,9 +49,10 @@
     <Compile Include="Solver\Deleted\Gauss.cs" />
     <Compile Include="Solver\DirectMethods\CholeskyFactorization.cs" />
     <Compile Include="Solver\DirectMethods\GaussSolver.cs" />
+    <Compile Include="Solver\DirectMethods\PCGSolver.cs" />
     <Compile Include="Solver\ILinearSolution.cs" />
-    <Compile Include="Solver\ISolver.cs" />
-    <Compile Include="Solver\LinearSolution.cs" />
+    <Compile Include="Solver\DirectMethods\ISolver.cs" />
+    <Compile Include="Solver\DirectMethods\LinearSolution.cs" />
     <Compile Include="Solver\NLSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,7 +68,7 @@
     <Compile Include="Elements\IElements1D.cs" />
     <Compile Include="Data\InputData.cs" />
     <Compile Include="Solver\IterativeSolver.cs" />
-    <Compile Include="Solver\StaticSolver.cs" />
+    <Compile Include="Solver\DirectMethods\StaticSolver.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
