Addition od IAssembly interface and Assembly class. Small scale refactoring of other class to accept those two.

--- a/FiniteElementsProject/FiniteElementsProject.csproj
+++ b/FiniteElementsProject/FiniteElementsProject.csproj
@@ -37,6 +37,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assemble\Assembly.cs" />
+    <Compile Include="Assemble\IAssembly.cs" />
     <Compile Include="Elements\Bar2D.cs" />
     <Compile Include="Elements\NLEulerBernoulli1DElement.cs" />
     <Compile Include="Elements\NLTruss.cs" />
